vpc/ig.tf
# Internet Gateway Creation and Attachment
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "swiftext-igw"
  }
}
